kube-ingress-chatApp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - mychatappingress.com
    secretName: chatapp-tls
  rules:
    - host: "mychatappingress.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatapp-frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: chatapp-backend
                port:
                  number: 3000
